# golem-hackathon-2025

./: Cargo.toml  README.MD  golem.yaml
common-rust/: golem.yaml
components-rust/my-agent/: Cargo.toml  golem.yaml
components-rust/my-agent/src/: lib.rs
components-rust/my-agent/wit/: my-agent.wit
